feat: add properties eureka

--- a/dropstat-user-batch/dev/application.yaml
+++ b/dropstat-user-batch/dev/application.yaml
@@ -48,3 +48,10 @@ spring:
 sendgrid:
   api:
     key: ${{ secrets.SEND_GRID_API_KEY }}
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/  # URL do Eureka Server
+  instance:
+    prefer-ip-address: true
