--- a/dropstat-user-api/dev/application.yaml
+++ b/dropstat-user-api/dev/application.yaml
@@ -2,9 +2,6 @@ server:
   port: 8080
 
 spring:
-  docker:
-    compose:
-      enabled: 'false'
   profiles:
     active: dev
   application:
@@ -26,6 +23,10 @@ spring:
       ddl-auto: none
     show-sql: 'true'
     database-platform: org.hibernate.dialect.MySQL8Dialect
+
+sendgrid:
+  api:
+    key: eee
 
 eureka:
   client:
