feat: add properties open ai

--- a/dropstat-user-api/dev/application.yaml
+++ b/dropstat-user-api/dev/application.yaml
@@ -28,6 +28,15 @@ sendgrid:
   api:
     key: eee
 
+springdoc:
+  api-docs:
+    path: /api-docs
+    enabled: true
+
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+
 eureka:
   client:
     service-url:
